--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-jvectormap/world": "^1.1.2",
     "@stripe/stripe-js": "^8.0.0",
+    "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.74.0",
     "@tabler/icons-react": "^3.35.0",
     "@tailwindcss/forms": "^0.5.10",
