--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,16 +30,34 @@ jobs:
         with:
           node-version: 22
 
-      - name: 📥 Install dependencies
-        run: npm ci
+      # --- Frontend Dependencies ---
+      - name: 📥 Install Frontend dependencies
+        run: |
+          cd frontend
+          npm ci
+
+      # --- Backend Dependencies ---
+      - name: 📥 Install Backend dependencies
+        run: |
+          cd backend
+          npm ci
+          
+      # The rest of your steps would also need to be scoped
 
       - name: 🔍 Lint & Type Check
         run: |
           npm run lint --if-present
           npm run type-check --if-present
 
-      - name: 🧱 Build project
-        run: npm run build
+      - name: 🧱 Build Frontend project
+        run: |
+          cd frontend
+          npm run build
+          
+      - name: 🧱 Build Backend project
+        run: |
+          cd backend
+          npm run build
 
       - name: ✅ Run tests
         run: npm test --if-present
