--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "clsx": "^2.1.1",
     "flatpickr": "^4.6.13",
     "framer-motion": "^12.23.22",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.545.0",
     "next": "15.5.9",
     "next-themes": "^0.4.6",
@@ -51,6 +52,7 @@
     "react-dnd": "^16.0.1",
     "react-dom": "19.1.0",
     "react-intersection-observer": "^10.0.0",
+    "react-leaflet": "^5.0.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
