--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express": "^5.1.0",
     "jest": "^30.2.0",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.13",
     "nodemon": "^3.1.10",
     "stripe": "^19.1.0",
     "uuid": "^13.0.0",
